tests/baselines/reference/parserUnfinishedTypeNameBeforeKeyword1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnfinishedTypeNameBeforeKeyword1.ts (4 errors) ====
    var x: TypeModule1.
           ~~~~~~~~~~~~
    module TypeModule2 {
           ~~~~~~~~~~~
!!! error TS1005: '=' expected.
                       ~
!!! error TS1005: ',' expected.
    ~~~~~~
!!! error TS2304: Cannot find name 'TypeModule1'.
           ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TypeModule2'.
    }
    